# nlpeep

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: tui-inspection.md
agent_docs/: VISION.md  alternative_approaches.md
src/nlpeep/: __main__.py  app.py  config.py  data.py  renderers.py  schema.py  tts.py  user_config.py
src/nlpeep/styles/: app.tcss
src/nlpeep/widgets/: doc_card.py  field_panel.py  mapping_modal.py  navigator.py  record_view.py  score_bar.py  tts_modal.py
src/rag_viewer/: __main__.py  app.py  config.py  renderers.py  schema.py
src/rag_viewer/styles/: app.tcss
src/rag_viewer/widgets/: doc_card.py  field_panel.py  mapping_modal.py  navigator.py  record_view.py  score_bar.py
tests/: test_auto_detect.py  test_loaders.py  test_ner_renderer.py  test_tokenize.py  test_trace_assembly.py  test_tts.py  test_user_config.py
tests/fixtures/: flat_metrics.jsonl  multi_hop.jsonl  simple_rag.jsonl  tool_calling.jsonl
tests/reference_data/: cnn_dailymail_summarization.csv  cnn_dailymail_summarization.jsonl  conll2003_ner.jsonl  imdb_sentiment.csv  imdb_sentiment.jsonl  langfuse_rag_trace.jsonl  langsmith_rag_trace.jsonl  multi_hop_rag_trace.jsonl  opus100_translation_en_fr.jsonl  phoenix_openinference_rag_trace.jsonl  ragas_comparison.json  ragas_evaluation_output.jsonl  ragas_metrics_by_domain.json  simple_rag_output.jsonl  squad_extractive_qa.jsonl
