[project]
name = "nlpeep"
version = "0.0.1"
description = "A beautiful TUI for inspecting NLP and RAG pipeline data"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "polars>=1.0",
]

[project.scripts]
peep = "nlpeep.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlpeep"]
