[project]
name = "nlpeep"
version = "0.0.1"
description = "A beautiful TUI for inspecting NLP and RAG pipeline data"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "polars>=1.0",
    "platformdirs>=4.0",
]

[project.scripts]
peep = "nlpeep.__main__:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.11",
]
tts = [
    "litellm>=1.0",
    "playsound3>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP038"]  # isinstance(x, (A, B)) is fine; rule deprecated in ruff 0.3+

[tool.hatch.build.targets.wheel]
packages = ["src/nlpeep"]
